--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "commit": "npm run format && npm run lint:fix",
-    "test": "npm run build && node --test \"dist/**/*.test.js\""
+    "test": "npm run build && npm run test:coverage",
+    "test:coverage": "c8 --reporter=text --reporter=text-summary --reporter=lcov --reporter=html --reporter=json-summary node --test \"dist/**/*.test.js\""
   },
   "keywords": [
     "vector",
@@ -46,6 +47,7 @@
     "husky": "^9.1.5",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "c8": "^9.1.0"
   }
 }
